# docs/swagger.json
@@ -15,7 +15,7 @@
         "version": "0.0.1"
     },
     "paths": {
-        "/api.example.com/v1beta/db/total": {
+        "/apis/example.dev/v1beta/db/total": {
             "get": {
                 "security": [
                     {
@@ -49,7 +49,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Health"
+                    "默认"
                 ],
                 "summary": "errpage",
                 "responses": {
@@ -63,7 +63,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Health"
+                    "默认"
                 ],
                 "summary": "errpanic",
                 "responses": {
@@ -72,14 +72,25 @@
             }
         },
         "/gentoken": {
-            "get": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "Health"
+                    "默认"
                 ],
                 "summary": "生成测试Token",
+                "parameters": [
+                    {
+                        "description": "用户信息",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/health.User"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {}
                 }
@@ -91,7 +102,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Health"
+                    "默认"
                 ],
                 "summary": "health",
                 "responses": {
@@ -105,11 +116,24 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Health"
+                    "默认"
                 ],
                 "summary": "version",
                 "responses": {
                     "200": {}
+                }
+            }
+        }
+    },
+    "definitions": {
+        "health.User": {
+            "type": "object",
+            "properties": {
+                "username": {
+                    "type": "string"
+                },
+                "userrole": {
+                    "type": "string"
                 }
             }
         }
